<resources>
    <string name="app_name">Quick Setup Guide for Cutting Plotter</string>

    <string name="papelopaline">Opaline Paper</string>
    <string name="papellinho">Linen Paper</string>
    <string name="papelverge">Verge Paper</string>

    <string name="canson">Canson</string>
    <string name="chamex">Chamex</string>
    <string name="spiral">Spiral</string>

    <string name="roxo">Purple</string>
    <string name="turquesa">Turquoise</string>

    <string name="superforte">Super Strong</string>
    <string name="standard">Standard</string>

    <string name="delicado">Delicate</string>
    <string name="pesado">Heavy</string>
    <string name="title_activity_lista_processo">ProcessListActivity</string>

    <string name="cortepesado">Heavy Cutting\n</string>
    <string name="cortedelicado">Delicate Cutting</string>
    <string name="menu_item_adicionar">Add</string>
    <string name="context_menu_item_editar">Edit</string>
    <string name="context_menu_item_excluir">Delete</string>
    <string name="menu_item_salvar">Save</string>
    <string name="menu_item_limpar">Clear</string>
    <string name="descricaoapp">App for quick consultation of configuration parameters for the cutting plotter according to the desired material and process</string>
    <string name="autor">Author:</string>
    <string name="nomeautor">Guilherme Pires Groff Benedeti</string>
    <string name="cursolabel">Course:</string>
    <string name="nomecurso">Specialization in Java Development</string>
    <string name="labelemail">Email:</string>
    <string name="emailautor">guilherme.benedeti@utfpr.edu.br</string>
    <string name="labelMaterial">Material</string>
    <string name="labelgramatura">Weight:</string>
    <string name="labelmarca">Brand</string>
    <string name="labelprocesso">Process</string>
    <string name="labelpressaferramenta">Tool Pressure</string>
    <string name="labeltipoprocesso">Process Type</string>
    <string name="labelcorte">Cutting</string>
    <string name="labeldesenho">Design</string>
    <string name="labeltapete">Mat</string>
    <string name="labelprofundidadelamina">Blade Depth</string>
    <string name="labelcorlamina">Blade Color</string>
    <string name="labeletecido">Is it fabric?</string>
    <string name="labelcortapete">Mat Color:</string>
    <string name="labelforcatapete">Mat Force:</string>
    <string name="labelcorcaneta">Pen Color:</string>
    <string name="labeltipocorte">Cut Type:</string>
    <string name="labelsobre">About</string>
    <string name="novo_processo">New Process</string>
    <string name="alterar_processo">Edit Process</string>
    <string name="menu_item_tema_escuro">Dark Theme</string>
    <string name="menu_item_tema_claro">Light Theme</string>
    <string name="procedimento_selecionado">" The procedure for the paper "</string>
    <string name="com">with</string>
    <string name="gramas_marca">"grams, from the brand "</string>
    <string name="foi_clicado">were touched</string>
    <string name="confirmar_excluir_processo">Are you sure you want to delete the process?</string>
    <string name="confirmar">Confirm?</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="home">Home</string>
    <string name="insumos_subheader_titte">Insumos\n</string>
    <string name="tapetes_item">Tapetes\n</string>
    <string name="laminas_item">Laminas</string>
    <string name="processos_title">Processos</string>
    <string name="corte_tab_tittle">Corte</string>
    <string name="desenho_tab_tittle">Desenho</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="thickness">Thickness</string>
    <string name="pen">Pen</string>
    <string name="blade_color">Blade Color</string>
    <string name="cut_strength">Cut Strength</string>
    <string name="hyphen">-</string>
    <string name="confirmar_excluir_lamina">Are you sure you want to delete this blade?</string>
    <string name="sobre_title">About</string>
    <string name="laminas_title">Blades</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="label_blade_color">Blade Color</string>
    <string name="label_blade_cut_strength">Cut Strength</string>
    <string name="new_blade">New Blade</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>