<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blade_color"
        android:layout_weight="1"
        android:textAlignment="center"
        android:layout_gravity="center_vertical|center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hyphen"
        android:textAlignment="center"
        android:layout_gravity="center_vertical|center"/>

    <TextView
        android:id="@+id/grip_strength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/cut_strength"
        android:textAlignment="center"
        android:layout_gravity="center_vertical|center"/>
</LinearLayout>