<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/labelNomeMaterial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelMaterial" />

        <TextView
            android:id="@+id/textViewMaterialNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/labelGramaturaMaterial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelgramatura" />

        <TextView
            android:id="@+id/textViewGramatura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/labelCorTapete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelcortapete" />

        <TextView
            android:id="@+id/textViewTapeteCor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/labelForcaTapete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelforcatapete" />

        <TextView
            android:id="@+id/textViewForcaTapete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/labelPressao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelpressaferramenta" />

        <TextView
            android:id="@+id/textViewPressao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/labelCorte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labeltipoprocesso" />

        <TextView
            android:id="@+id/textViewIsCorte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/labelLaminaCor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelcorlamina" />

        <TextView
            android:id="@+id/textViewLaminaCor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/labelTipoMaterial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labeltipocorte" />

        <TextView
            android:id="@+id/textViewLaminaMaterial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/labelProfundidadeLamina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelprofundidadelamina" />

        <TextView
            android:id="@+id/textViewProfundidadeLamina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/labelIsTecido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labeletecido" />

        <TextView
            android:id="@+id/isTecido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>

</LinearLayout>