<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

        <LinearLayout
            android:id="@+id/standard_bottom_sheet"
            style="@style/Widget.Material3.BottomSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            app:layout_constraintTop_toTopOf="parent">

                <!-- Drag handle for accessibility -->
                <com.google.android.material.bottomsheet.BottomSheetDragHandleView
                    android:id="@+id/drag_handle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                        android:text="@string/filter"
                    android:textAlignment="center"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/filtro_nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:hint="@string/labelMaterial">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_filtro_nome"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="text"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/filtro_gramatura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:hint="@string/labelgramatura">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_filtro_gramatura"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="number"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/filtro_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>