<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CadastroActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/camposMaterial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            app:layout_constraintTop_toTopOf="parent" >

            <TextView
                android:id="@+id/labelTituloMaterial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/labelmaterial"
                android:textAlignment="center"
                android:textSize="25dp" />

            <LinearLayout
                android:id="@+id/campoNomeMaterial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/labelTituloMaterial"
                >

                <TextView
                    android:id="@+id/labelMaterial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/labelmaterial" />

                <EditText
                    android:id="@+id/inputNomeMaterial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/campoGramatura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/campoNomeMaterial"
                >

                <TextView
                    android:id="@+id/labelGramatura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/labelgramatura" />

                <EditText
                    android:id="@+id/inputGramatura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/campoMarcaMaterial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/labelMarca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/labelmarca" />

                <EditText
                    android:id="@+id/inputMarca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/camposProcesso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/camposMaterial"
            >

            <TextView
                android:id="@+id/tituloProcesso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/labelprocesso"
                android:textAlignment="center"
                android:textSize="25dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/pressaoFerramenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            app:layout_constraintTop_toBottomOf="@+id/camposProcesso">

            <TextView
                android:id="@+id/labelPressaoFerramenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelpressaferramenta" />

            <EditText
                android:id="@+id/inputPressao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/campoTipoOperacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            app:layout_constraintTop_toBottomOf="@+id/pressaoFerramenta">

            <TextView
                android:id="@+id/tituloTipoProcesso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/labeltipoprocesso"
                android:textAlignment="center"
                android:textSize="20dp"
                app:layout_constraintTop_toBottomOf="@+id/pressaoFerramenta" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tituloTipoProcesso">

                <RadioButton
                    android:id="@+id/radioButtonCorte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/labelcorte" />

                <RadioButton
                    android:id="@+id/radioButtonDesenho"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/labeldesenho" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/camposTapete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            app:layout_constraintTop_toBottomOf="@+id/campoTipoOperacao">

            <TextView
                android:id="@+id/labelTapete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labeltapete" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/labelTapete">

                <Spinner
                    android:id="@+id/tipoTapete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/labelTapete" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutDesenho"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible"
            android:layout_marginLeft="16dp"
            app:layout_constraintTop_toBottomOf="@+id/camposTapete">

            <TextView
                android:id="@+id/labelCaneta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Caneta"
                android:textSize="20dp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:id="@+id/campoEspessuraCaneta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/espessuraCaneta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Espessura" />

                <EditText
                    android:id="@+id/inputEspessuraCaneta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutCorte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible"
            android:layout_marginLeft="16dp"
            app:layout_constraintTop_toBottomOf="@+id/camposTapete">

            <LinearLayout
                android:id="@+id/campoProfundidadeLamina"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/labelProfundidadeLamina"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/labelprofundidadelamina" />

                <EditText
                    android:id="@+id/inputProfundidadeLamina"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />

            </LinearLayout>

           <LinearLayout
               android:id="@+id/campoCorLamina"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">

               <TextView
                   android:id="@+id/labelCorLamina"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/labelcorlamina" />

               <Spinner
                   android:id="@+id/inputCorLamina"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content" />

           </LinearLayout>

            <CheckBox
                android:id="@+id/checkBoxMaterialBase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labeletecido" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>